deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swisshousing-app
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swisshousing-app
  template:
    metadata:
      labels:
        app: swisshousing-app
    spec:
      containers:
      - name: swisshousing-app
        image: bokica08/devops-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
