statefullSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: swisshousing-db
  namespace: my-app
spec:
  serviceName: "swisshousing-db"
  replicas: 1
  selector:
    matchLabels:
      app: swisshousing-db
  template:
    metadata:
      labels:
        app: swisshousing-db
    spec:
      containers:
      - name: swisshousing-db
        image: postgres
        ports:
        - containerPort: 5432
