service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: swisshousing-db
  namespace: my-app
spec:
  selector:
    app: swisshousing-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
