service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: swisshousing-front
  namespace: my-app
spec:
  selector:
    app: swisshousing-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
