service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: swisshousing-app
    namespace: my-app
  spec:
    selector:
      app: swisshousing-app
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
    type: LoadBalancer
